--- a/challenge2/ch2.css
+++ b/challenge2/ch2.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
+
 /*----------------------------
 全体の初期設定
 ----------------------------*/
 * {
   box-sizing: border-box;
-  font-family: HGS明朝E;
+   font-family: 'Yuji Boku', serif;;
   margin: 0;
 }
 body {
@@ -52,3 +53,13 @@ em {
 /*----------------------------
 この下に、CSSの指定を記述していきましょう。
 ----------------------------*/
+body{
+  background: url(wood.jpg) #504643 left top repeat;
+  text-align: center;
+}
+ul{
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+li{flex: 1 1 20%;}
