--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 14px;
   line-height: 1.8;
   letter-spacing: .8px;
-  color: rgba(121, 4, 255, 0.623);
+  color: rgba(255, 255, 255, 0.623);
 }
 
 a {
@@ -218,7 +218,7 @@ li {
   font-weight: bold;
   padding: 8px 16px;
   border: 1px dashed #FFF;
-  box-shadow: 0px 0px 0px 2px #293b6a;/* box-shadowで外枠を */
+  box-shadow: 0px 0px 0px 2px #0a132c;/* box-shadowで外枠を */
 }
 
 .btn-denim:hover {
@@ -325,7 +325,7 @@ li {
   font-weight: bold;
   padding: 12px 24px;
   border-radius: 4px;
-  background-image: linear-gradient(-90deg, #1e5d81, #f153c9);
+  background-image: linear-gradient(-90deg, #3984af, #f153c9);
   transition: .5s;
   background-size: 200%;
 }
@@ -619,3 +619,6 @@ li {
     padding: 50px 0;
   }
 }
+
+body{background-color: #000;}
+.logo{max-width: 40%;}
